<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:background="@drawable/widget_background"
    android:orientation="vertical"
    android:padding="0dp"
    tools:ignore="Overdraw" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="#000000"
        android:orientation="horizontal"
        android:padding="0dp" >

        <TextView
            android:id="@+id/widget_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/widget_refresh"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/widget_button_background"
            android:contentDescription="@string/widget_cd_random"
            android:padding="5dp"
            android:scaleType="center"
            android:src="@drawable/ic_menu_refresh"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/widget_random"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/widget_button_background"
            android:contentDescription="@string/widget_cd_random"
            android:padding="5dp"
            android:scaleType="center"
            android:src="@drawable/ic_menu_shuffle"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/widget_previous"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:background="@drawable/widget_button_background"
            android:contentDescription="@string/widget_cd_previous"
            android:gravity="center|top"
            android:padding="0dp"
            android:src="@drawable/widget_previous"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/widget_next"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:background="@drawable/widget_button_background"
            android:contentDescription="@string/widget_cd_next"
            android:padding="0dp"
            android:src="@drawable/widget_next"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/widget_latest"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="0dp"
            android:background="@drawable/widget_button_background"
            android:contentDescription="@string/widget_cd_latest"
            android:padding="0dp"
            android:src="@drawable/widget_latest"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <ImageView
            android:id="@+id/widget_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/cd_dilbert_image"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />

        <ProgressBar
            android:id="@+id/widget_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>